Fix layout break due to new list menu

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -92,36 +92,32 @@ main {
   }
   .builder {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-columns: 0.5fr 1fr;
+    grid-template-rows: repeat(4, 0.1fr);
     gap: 0 $spc-400;
     align-items: start;
 
     .settings {
-      grid-column: 1 / 3;
+      grid-column: 2 / 3;
+      grid-row: 1 / 6;
+    }
+
+    .inactive {
+      grid-column: 1 / 2;
     }
 
     .active ~ .inactive,
     .active ~ .settings {
       min-width: 0;
-      grid-column: 2 / 3;
+      grid-column: 1 / 2;
+    }
 
-      .fa-angle-down {
-        rotate: 90deg;
-      }
+    .active ~ .settings {
+      grid-row: 5 / 6;
     }
 
     .active {
       grid-row: 1 / 7;
-      min-width: 480px;
-
-      .fa-angle-down {
-        rotate: 90deg;
-      }
-    }
-
-    &:has(.active) {
-      grid-template-rows: repeat(5, 0.1fr) 1fr;
     }
   }
 }
@@ -144,7 +140,7 @@ main {
     align-items: start;
 
     .settings {
-      grid-column: 1 / 7;
+      grid-column: 1 / 6;
     }
 
     .active ~ .inactive {
@@ -152,12 +148,12 @@ main {
     }
 
     .active ~ .settings {
-      grid-column: 1 / 6;
+      grid-column: 1 / 5;
     }
 
     .active {
       grid-row: 2 / 4;
-      grid-column: 1 / 6;
+      grid-column: 1 / 5;
       min-width: 0;
 
       .input-title {
